Ported ListingFragment row style to styles.xml

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,5 +8,6 @@
     <dimen name="listing_author_text_size">16sp</dimen>
     <dimen name="listing_subreddit_text_size">16sp</dimen>
     <dimen name="listing_timestamp_text_size">16sp</dimen>
+    <dimen name="listing_row_height">48dp</dimen>
 
 </resources>
