--- a/app/src/main/res/layout/listing_item.xml
+++ b/app/src/main/res/layout/listing_item.xml
@@ -2,16 +2,12 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:padding="16dp" >
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/listing_row_height" >
 
     <TextView
+        style="@style/ListingScoreTextView"
         android:id="@+id/listing_score"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:textSize="@dimen/listing_score_text_size"
         android:text="•"/>
 
     <LinearLayout
@@ -22,12 +18,8 @@
         android:layout_marginRight="5dp" >
 
         <TextView
-            android:id="@+id/listing_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/listing_title_text_size"
-            android:singleLine="true"
-            android:ellipsize="end"/>
+            style="@style/ListingTitleTextView"
+            android:id="@+id/listing_title"/>
 
         <LinearLayout
             android:orientation="horizontal"
@@ -35,28 +27,16 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/listing_author"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:textSize="@dimen/listing_author_text_size"/>
+                style="@style/ListingAuthorTextView"
+                android:id="@+id/listing_author"/>
 
             <TextView
-                android:id="@+id/listing_subreddit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:textSize="@dimen/listing_subreddit_text_size"/>
+                style="@style/ListingSubredditTextView"
+                android:id="@+id/listing_subreddit"/>
 
             <TextView
-                android:id="@+id/listing_timestamp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:textSize="@dimen/listing_timestamp_text_size"
-                android:singleLine="true"
-                android:ellipsize="end"/>
+                style="@style/ListingTimestampTextView"
+                android:id="@+id/listing_timestamp"/>
 
         </LinearLayout>
 
