--- a/app/src/main/res/layout/listings_fragment.xml
+++ b/app/src/main/res/layout/listings_fragment.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -27,6 +26,4 @@
 
     </LinearLayout>
 
-    <include layout="@layout/navigation_drawer" />
-
-</android.support.v4.widget.DrawerLayout>
+</FrameLayout>
