--- a/app/src/main/res/layout/navigation_drawer_item.xml
+++ b/app/src/main/res/layout/navigation_drawer_item.xml
@@ -6,14 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/drawer_item_label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:textColor="@android:color/white"
-        android:textAppearance="?android:attr/textAppearanceListItemSmall"
-        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
-        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
-        android:minHeight="?android:attr/listPreferredItemHeightSmall"/>
+        style="@style/NavigationDrawerItem"
+        android:id="@+id/drawer_item_label"/>
 
 </LinearLayout>
