--- a/app/src/main/res/layout/listing_item.xml
+++ b/app/src/main/res/layout/listing_item.xml
@@ -1,45 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/listing_row_height" >
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:paddingBottom="5dp"
+    android:paddingTop="5dp">
 
     <TextView
-        style="@style/ListingScoreTextView"
         android:id="@+id/listing_score"
+        style="@style/ListingScoreTextView"
+        android:layout_gravity="center_vertical"
         android:text="•"/>
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp" >
+        android:layout_weight="1">
 
         <TextView
+            android:id="@+id/listing_title"
             style="@style/ListingTitleTextView"
-            android:id="@+id/listing_title"/>
+            android:layout_gravity="center_vertical"/>
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/listing_author"
+            style="@style/ListingAuthorTextView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/listing_title"/>
 
-            <TextView
-                style="@style/ListingAuthorTextView"
-                android:id="@+id/listing_author"/>
+        <TextView
+            android:id="@+id/listing_subreddit"
+            style="@style/ListingSubredditTextView"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/listing_title"/>
 
-            <TextView
-                style="@style/ListingSubredditTextView"
-                android:id="@+id/listing_subreddit"/>
+        <TextView
+            android:id="@+id/listing_timestamp"
+            style="@style/ListingTimestampTextView"
+            android:layout_below="@id/listing_subreddit"/>
 
-            <TextView
-                style="@style/ListingTimestampTextView"
-                android:id="@+id/listing_timestamp"/>
+    </RelativeLayout>
 
-        </LinearLayout>
-
-    </LinearLayout>
+    <ImageView
+        style="@style/ListingThumbnail"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/thumbnail_background"
+        android:src="@android:drawable/ic_menu_help"/>
 
 </LinearLayout>
