--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -70,6 +70,14 @@
         <item name="android:textStyle">italic</item>
     </style>
 
+    <style name="ListingDomainTextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginRight">5dp</item>
+        <item name="android:textSize">@dimen/listing_domain_text_size</item>
+        <item name="android:textStyle">italic</item>
+    </style>
+
     <style name="ListingThumbnail">
         <item name="android:layout_width">48dp</item>
         <item name="android:layout_height">48dp</item>
