--- a/app/src/main/res/layout/listings_item.xml
+++ b/app/src/main/res/layout/listings_item.xml
@@ -10,7 +10,7 @@
     <TextView
         android:id="@+id/listing_score"
         style="@style/ListingScoreTextView"
-        android:layout_gravity="center_vertical"
+        android:gravity="center"
         android:text="•"/>
 
     <RelativeLayout
