--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,12 +31,13 @@
     </style>
 
     <style name="ListingScoreTextView">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">42dp</item>
+        <item name="android:layout_height">fill_parent</item>
         <item name="android:layout_marginLeft">5dp</item>
         <item name="android:layout_marginRight">10dp</item>
         <item name="android:textSize">@dimen/listing_score_text_size</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:singleLine">true</item>
     </style>
 
     <style name="ListingTitleTextView">
