Changed link title color to blue

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,6 +45,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginBottom">5dp</item>
         <item name="android:textSize">@dimen/listing_title_text_size</item>
+        <item name="android:textColor">@color/link_title</item>
         <item name="android:minLines">2</item>
         <item name="android:maxLines">2</item>
         <item name="android:ellipsize">end</item>
