--- a/app/src/main/res/menu/menu_link_context.xml
+++ b/app/src/main/res/menu/menu_link_context.xml
@@ -1,32 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/action_upvote"
         android:title="@string/action_upvote"
-        android:icon="@drawable/ic_action_upvote"/>
+        android:icon="@drawable/ic_action_upvote"
+        app:showAsAction="ifRoom"/>
 
     <item android:id="@+id/action_downvote"
         android:title="@string/action_downvote"
-        android:icon="@drawable/ic_action_downvote"/>
+        android:icon="@drawable/ic_action_downvote"
+        app:showAsAction="ifRoom"/>
 
     <item android:id="@+id/action_show_comments"
         android:title="@string/action_show_comments"
-        android:icon="@drawable/ic_action_show_comments"/>
+        android:icon="@drawable/ic_action_show_comments"
+        app:showAsAction="ifRoom"/>
 
     <item android:id="@+id/action_save"
         android:title="@string/action_save"
-        android:icon="@drawable/ic_action_save_filled"/>
+        android:icon="@drawable/ic_action_save_filled"
+        app:showAsAction="ifRoom"/>
 
     <item android:id="@+id/action_share"
         android:title="@string/action_share"
-        android:icon="@drawable/ic_action_share"/>
+        android:icon="@drawable/ic_action_share"
+        app:showAsAction="ifRoom"/>
 
     <item android:id="@+id/action_open_in_browser"
         android:title="@string/action_open_in_browser"
-        android:icon="@drawable/ic_action_open_in_browser"/>
+        android:icon="@drawable/ic_action_open_in_browser"
+        app:showAsAction="ifRoom"/>
 
     <item android:id="@+id/action_report"
         android:title="@string/action_report"
-        android:icon="@drawable/ic_action_report"/>
+        android:icon="@drawable/ic_action_report"
+        app:showAsAction="ifRoom"/>
 
 </menu>
