--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,17 +18,35 @@
         <item name="android:background">#030304</item>
     </style>
 
-    <style name="NavigationDrawerItemText">
+    <style name="NavigationDrawerItem">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">horizontal</item>
         <item name="android:gravity">center_vertical</item>
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:textAppearance">?android:attr/textAppearanceListItemSmall</item>
+        <!--<item name="android:textAppearance">?android:attr/textAppearanceListItemSmall</item>-->
         <item name="android:paddingLeft">?android:attr/listPreferredItemPaddingStart</item>
         <item name="android:paddingRight">?android:attr/listPreferredItemPaddingEnd</item>
-        <item name="android:paddingStart">?android:attr/listPreferredItemPaddingStart</item>
-        <item name="android:paddingEnd">?android:attr/listPreferredItemPaddingEnd</item>
         <item name="android:minHeight">?android:attr/listPreferredItemHeightSmall</item>
+    </style>
+
+    <style name="NavigationDrawerItemIcon">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="NavigationDrawerItemText">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <!--<item name="android:layout_width">match_parent</item>-->
+        <!--<item name="android:layout_height">wrap_content</item>-->
+        <!--<item name="android:gravity">center_vertical</item>-->
+        <item name="android:textColor">@android:color/white</item>
+        <!--<item name="android:textAppearance">?android:attr/textAppearanceListItemSmall</item>-->
+        <!--<item name="android:paddingLeft">?android:attr/listPreferredItemPaddingStart</item>-->
+        <!--<item name="android:paddingRight">?android:attr/listPreferredItemPaddingEnd</item>-->
+        <!--<item name="android:paddingStart">?android:attr/listPreferredItemPaddingStart</item>-->
+        <!--<item name="android:paddingEnd">?android:attr/listPreferredItemPaddingEnd</item>-->
+        <!--<item name="android:minHeight">?android:attr/listPreferredItemHeightSmall</item>-->
     </style>
 
     <style name="ListingScoreTextView">
