Added go to subreddit field in drawer

--- a/app/src/main/res/layout/navigation_drawer.xml
+++ b/app/src/main/res/layout/navigation_drawer.xml
@@ -1,8 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/navigation_drawer"
+<LinearLayout android:id="@+id/navigation_drawer"
     style="@style/NavigationDrawer"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical">
+
+    <LinearLayout
+        android:id="@+id/drawer_navigate_to_subreddit"
+        style="@style/NavigationDrawerItem">
+
+        <EditText
+            android:id="@+id/drawer_navigate_to_subreddit_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="@string/go_to_subreddit"
+            android:imeOptions="actionDone"
+            android:inputType="text"
+            android:singleLine="true"
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/white"/>
+
+        <ImageView
+            android:id="@+id/drawer_navigate_to_subreddit_go"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_navigation_go"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/drawer_log_in"
