--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,7 +23,6 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">horizontal</item>
         <item name="android:gravity">center_vertical</item>
-        <!--<item name="android:textAppearance">?android:attr/textAppearanceListItemSmall</item>-->
         <item name="android:paddingLeft">?android:attr/listPreferredItemPaddingStart</item>
         <item name="android:paddingRight">?android:attr/listPreferredItemPaddingEnd</item>
         <item name="android:minHeight">?android:attr/listPreferredItemHeightSmall</item>
@@ -37,16 +36,17 @@
     <style name="NavigationDrawerItemText">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <!--<item name="android:layout_width">match_parent</item>-->
-        <!--<item name="android:layout_height">wrap_content</item>-->
-        <!--<item name="android:gravity">center_vertical</item>-->
         <item name="android:textColor">@android:color/white</item>
-        <!--<item name="android:textAppearance">?android:attr/textAppearanceListItemSmall</item>-->
-        <!--<item name="android:paddingLeft">?android:attr/listPreferredItemPaddingStart</item>-->
-        <!--<item name="android:paddingRight">?android:attr/listPreferredItemPaddingEnd</item>-->
-        <!--<item name="android:paddingStart">?android:attr/listPreferredItemPaddingStart</item>-->
-        <!--<item name="android:paddingEnd">?android:attr/listPreferredItemPaddingEnd</item>-->
-        <!--<item name="android:minHeight">?android:attr/listPreferredItemHeightSmall</item>-->
+        <item name="android:textAppearance">?android:attr/textAppearanceListItemSmall</item>
+    </style>
+
+    <style name="NavigationDrawerEditText">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceListItemSmall</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColorHint">@android:color/darker_gray</item>
     </style>
 
     <style name="ListingScoreTextView">
