--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,5 +11,6 @@
     <dimen name="listing_domain_text_size">12sp</dimen>
     <dimen name="listing_row_height">48dp</dimen>
     <dimen name="navigation_drawer_width">240dp</dimen>
+    <dimen name="text_view_margin">5dp</dimen>
 
 </resources>
