Added refresh action item

--- a/app/src/main/res/menu/menu_links.xml
+++ b/app/src/main/res/menu/menu_links.xml
@@ -15,6 +15,12 @@
         app:showAsAction="ifRoom|withText" />
 
     <item
+        android:id="@+id/action_refresh"
+        android:title="@string/action_refresh"
+        android:icon="@drawable/ic_action_refresh"
+        app:showAsAction="ifRoom|withText" />
+
+    <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
