--- a/app/src/main/res/layout/links_fragment.xml
+++ b/app/src/main/res/layout/links_fragment.xml
@@ -26,4 +26,18 @@
 
     </FrameLayout>
 
+    <FrameLayout
+        android:id="@+id/progress_bar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+
+        <ProgressBar
+            style="@style/ProgressDialog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+
+    </FrameLayout>
+
 </FrameLayout>
