--- a/app/src/main/res/layout/comments_fragment.xml
+++ b/app/src/main/res/layout/comments_fragment.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <include layout="@layout/links_list_item" />
 
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:divider="@null"/>
 
     <FrameLayout
         android:id="@android:id/empty"
@@ -26,4 +30,4 @@
 
     </FrameLayout>
 
-</FrameLayout>
+</LinearLayout>
