--- a/app/src/main/res/layout/comments_fragment.xml
+++ b/app/src/main/res/layout/comments_fragment.xml
@@ -5,13 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/links_list_item" />
+    <include layout="@layout/reddit_link_item" />
 
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@null"/>
+        android:layout_height="match_parent"/>
 
     <FrameLayout
         android:id="@android:id/empty"
