--- a/app/src/main/res/layout/reddit_comment_item.xml
+++ b/app/src/main/res/layout/reddit_comment_item.xml
@@ -38,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/comment_author"
         android:layout_marginTop="3dp"
-        android:textSize="14sp"/>
+        android:textSize="14sp"
+        android:textColor="@color/black"/>
 
 </RelativeLayout>
