--- a/app/src/main/res/layout/comments_fragment.xml
+++ b/app/src/main/res/layout/comments_fragment.xml
@@ -10,7 +10,8 @@
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:divider="@null"/>
 
     <FrameLayout
         android:id="@android:id/empty"
