--- a/app/src/main/res/layout/comment_padding_view.xml
+++ b/app/src/main/res/layout/comment_padding_view.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <View xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="3dp"
-    android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_light"
-    android:layout_marginLeft="2dp"/>
+    android:layout_width="@dimen/comment_indentation_width"
+    android:layout_height="match_parent"/>
