--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -18,4 +18,18 @@
         <item>all</item>
     </string-array>
 
+    <!-- Colors for comment indentation -->
+    <array name="indentation_colors">
+        <item>#0040FF</item>
+        <item>#1953FF</item>
+        <item>#3366FF</item>
+        <item>#4D79FF</item>
+        <item>#668CFF</item>
+        <item>#809FFF</item>
+        <item>#99B3FF</item>
+        <item>#B3C6FF</item>
+        <item>#CCD9FF</item>
+        <item>#E6ECFF</item>
+    </array>
+
 </resources>
