--- a/app/src/main/res/layout/comment_padding_view.xml
+++ b/app/src/main/res/layout/comment_padding_view.xml
@@ -2,4 +2,5 @@
 
 <View xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/comment_indentation_width"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent"
+    android:layout_marginLeft="@dimen/comment_indentation_margin"/>
