--- a/app/src/main/res/layout/reddit_comment_item.xml
+++ b/app/src/main/res/layout/reddit_comment_item.xml
@@ -22,10 +22,17 @@
         android:paddingLeft="5dp"
         android:paddingRight="5dp">
 
+        <ImageView
+            android:id="@+id/comment_expander"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:src="@drawable/ic_navigation_expand_less"/>
+
         <TextView
             android:id="@+id/comment_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/comment_expander"
             android:layout_marginRight="5dp"
             android:textStyle="bold"
             android:textSize="12sp"/>
