--- a/app/src/main/res/layout/reddit_comment_item.xml
+++ b/app/src/main/res/layout/reddit_comment_item.xml
@@ -26,7 +26,7 @@
             android:id="@+id/comment_expander"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:src="@drawable/ic_navigation_expand_less"/>
+            android:src="@drawable/ic_thread_contract"/>
 
         <TextView
             android:id="@+id/comment_author"
@@ -50,6 +50,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/comment_score"
+            android:textStyle="italic"
+            android:textSize="12sp"/>
+
+        <TextView
+            android:id="@+id/comment_more"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/comment_timestamp"
             android:textStyle="italic"
             android:textSize="12sp"/>
 
