Refactored names of dimens.xml

--- a/app/src/main/res/layout/reddit_comment_item.xml
+++ b/app/src/main/res/layout/reddit_comment_item.xml
@@ -24,8 +24,8 @@
 
         <ImageView
             android:id="@+id/comment_expander"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
+            android:layout_width="@dimen/comment_expander_size"
+            android:layout_height="@dimen/comment_expander_size"
             android:src="@drawable/ic_thread_contract"/>
 
         <TextView
@@ -33,17 +33,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/comment_expander"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="@dimen/comment_author_padding"
             android:textStyle="bold"
-            android:textSize="12sp"/>
+            android:textSize="@dimen/comment_author_text_size"/>
 
         <TextView
             android:id="@+id/comment_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/comment_author"
-            android:layout_marginRight="5dp"
-            android:textSize="12sp"/>
+            android:layout_marginRight="@dimen/comment_score_padding"
+            android:textSize="@dimen/comment_score_text_size"/>
 
         <TextView
             android:id="@+id/comment_timestamp"
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/comment_score"
             android:textStyle="italic"
-            android:textSize="12sp"/>
+            android:textSize="@dimen/comment_timestamp_text_size"/>
 
         <TextView
             android:id="@+id/comment_more"
@@ -59,15 +59,15 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/comment_timestamp"
             android:textStyle="italic"
-            android:textSize="12sp"/>
+            android:textSize="@dimen/comment_more_text_size"/>
 
         <TextView
             android:id="@+id/comment_body"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/comment_author"
-            android:layout_marginTop="3dp"
-            android:textSize="14sp"
+            android:layout_marginTop="@dimen/comment_body_margin"
+            android:textSize="@dimen/comment_body_text_size"
             android:textColor="@color/black"/>
 
     </RelativeLayout>
