--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,16 +3,25 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <dimen name="listing_score_text_size">14dp</dimen> <!-- In dp so it doesn't overflow -->
-    <dimen name="listing_title_text_size">16sp</dimen>
-    <dimen name="listing_author_text_size">12sp</dimen>
-    <dimen name="listing_timestamp_text_size">12sp</dimen>
-    <dimen name="listing_subreddit_text_size">12sp</dimen>
-    <dimen name="listing_domain_text_size">12sp</dimen>
-    <dimen name="listing_row_height">48dp</dimen>
+    <dimen name="link_score_text_size">14dp</dimen> <!-- In dp so it doesn't overflow -->
+    <dimen name="link_title_text_size">16sp</dimen>
+    <dimen name="link_author_text_size">12sp</dimen>
+    <dimen name="link_timestamp_text_size">12sp</dimen>
+    <dimen name="link_subreddit_text_size">12sp</dimen>
+    <dimen name="link_domain_text_size">12sp</dimen>
+    <dimen name="link_row_height">48dp</dimen>
     <dimen name="navigation_drawer_width">240dp</dimen>
-    <dimen name="text_view_margin">5dp</dimen>
-    <dimen name="comment_indentation_width">3dp</dimen>
-    <dimen name="comment_indentation_margin">3dp</dimen>
+    <dimen name="web_view_text_margin">5dp</dimen>
+    <dimen name="comment_indentation_width">2dp</dimen>
+    <dimen name="comment_indentation_margin">6dp</dimen>
+    <dimen name="comment_expander_size">16dp</dimen>
+    <dimen name="comment_author_padding">5dp</dimen>
+    <dimen name="comment_author_text_size">12sp</dimen>
+    <dimen name="comment_score_padding">5dp</dimen>
+    <dimen name="comment_score_text_size">12sp</dimen>
+    <dimen name="comment_timestamp_text_size">12sp</dimen>
+    <dimen name="comment_more_text_size">12sp</dimen>
+    <dimen name="comment_body_margin">3sp</dimen>
+    <dimen name="comment_body_text_size">14sp</dimen>
 
 </resources>
