--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string-array name="sort_options">
+    <string-array name="link_sort_options">
         <item>hot</item>
         <item>new</item>
         <item>rising</item>
         <item>top</item>
         <item>controversial</item>
+    </string-array>
+
+    <string-array name="comment_sort_options">
+        <item>confidence</item>
+        <item>top</item>
+        <item>new</item>
+        <item>hot</item>
+        <item>controversial</item>
+        <item>old</item>
     </string-array>
 
     <string-array name="timespan_options">
